# RAG-DocMind

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: auth.py  chat.py  documents.py
backend/app/core/: auth.py  config.py  rate_limiter.py  security.py
backend/app/db/: supabase.py
backend/app/schemas/: chat.py
backend/app/services/: cache.py  contextual_retrieval.py  embeddings.py  hybrid_search.py  metrics.py  pdf_extractor.py  rag.py  reranker.py  storage.py  vector_store.py
backend/app/tasks/: celery_app.py  document_tasks.py
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/callback/: route.ts
frontend/app/auth/login/: page.tsx
frontend/app/auth/setup/: page.tsx
frontend/app/auth/signup/: page.tsx
frontend/app/dashboard/: layout.tsx
frontend/app/dashboard/chat/: page.tsx
frontend/app/dashboard/documents/: page.tsx
frontend/app/dashboard/profile/: page.tsx
frontend/app/debug/: page.tsx
frontend/lib/: api.ts
